--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/fragment1"
-        android:name="com.example.kotlinpract1.Fragment1"
+        android:name="com.example.kotlinpract1.UI.View.Fragment1"
         android:label="Fragment1" >
         <action
             android:id="@+id/action_fragment1_to_fragment3"
@@ -14,7 +14,7 @@
     </fragment>
     <fragment
         android:id="@+id/fragment3"
-        android:name="com.example.kotlinpract1.Fragment3"
+        android:name="com.example.kotlinpract1.UI.View.Fragment3"
         android:label="Fragment3" >
         <action
             android:id="@+id/action_fragment3_to_fragment1"
